--- a/playbooks.yml
+++ b/playbooks.yml
@@ -8,7 +8,7 @@
     - name: "Installation du Package httpd"
       yum: 
         name: "httpd" 
-        state: "latest"
+        state: "present"
 
     - name: "Démarrage du service apache"
       service:
@@ -28,6 +28,36 @@
         dest: "/etc/httpd/conf.d/http_bk.conf"
         owner: "apache"
         group: "apache"
+        mode: 0644
+
+    - name: "Creation d'utilisateur"
+      user:
+        name: "{{ item }}"    
+        state: present
+
+      loop:
+        - bk
+        - bk2
+        - bk3  
+          
+    - name: "Installation prérequis paquets"
+      package:
+        name: "{{ item }}"
+        state: present
+      when: ansible_distribution == "CentOS"
+      loop:
+        - epel-release
+        - wget
+        - vim    
+          
+    - name: "copie de la template pour test"
+      template:
+        src: templates.j2
+        dest: /tmp/test-template.txt      
+        mode: 0644
+
+
+
 #      notify:
 #      - Restart apache
 
